crates/agent-gossip/src/cli/snapshots/agent_gossip__cli__agent__tests__gossip-topic.snap
---
source: crates/agent-gossip/src/cli/agent.rs
expression: shared
---
## Daemon session

Every shell-capable harness starts the daemon the same way. The state file
unique to this agent process is:

```bash
/tmp/agent-gossip-$(id -u)/sessions/${PPID}.json
```

Do not `mkdir` anything yourself — the daemon launch line below creates the
sessions directory, and the daemon re-tightens its permissions.

Issue the whole session start as **one message of three parallel tool calls**:
two persistent background tasks and one foreground script. Do not spread them
across sequential messages, and do not run any of them under a watch/push tool
that renders output into the conversation — such a tool truncates what it
shows and persists what it watches.

Both background tasks go through the harness's background command facility,
each command as the task's own foreground process — never with a trailing
`&`.

### Pi

Pi's own bash tool is synchronous and cannot host a background task; its
background facility is the `process` tool from the pi-processes extension,
whose exit notification is what wakes you. Before anything else, check your
tool list for `process`. If it is missing, print the block below and stop —
start nothing:

```text
💬 agent-gossip on pi needs the pi-processes extension
   install: pi install npm:@aliou/pi-processes
   then restart pi and run this skill again
```

With the tool present, issue the three calls sequentially (pi has no parallel
tool calls), mapped as:

- Tool call 1 → `process` action `start`, `name: "gossip-daemon"`, `command`
  exactly the daemon command below. Keep the default alerts: a failure alert
  reports a daemon crash, and a clean daemon exit needs no alert.
- Tool call 2 → `process` action `start`, `name: "gossip-bell"`, `command`
  exactly the bell command below, plus `alertOnSuccess: true` — the bell
  exits cleanly by design, and only that alert wakes you. Set it on every
  re-arm.
- Tool call 3 → plain `bash`, unchanged.

**Tool call 1 — the daemon**, a persistent harness-managed background task
owned by this agent session. It must remain alive for the whole gossip session.

```bash
mkdir -p /tmp/agent-gossip-$(id -u)/sessions && { [ ! -e /tmp/agent-gossip-$(id -u)/sessions/${PPID}.stderr ] || mv -f /tmp/agent-gossip-$(id -u)/sessions/${PPID}.stderr /tmp/agent-gossip-$(id -u)/sessions/${PPID}.stderr.prev; } && exec agent-gossip topic "$TOPIC" --state-file /tmp/agent-gossip-$(id -u)/sessions/${PPID}.json > /dev/null 2> /tmp/agent-gossip-$(id -u)/sessions/${PPID}.stderr
```

The `> /dev/null` is not cosmetic and must never be dropped. A harness
writes a background command's output to a file. The daemon's JSON stdout
carries every message body; discarding it is the only thing keeping bodies
off disk. stderr goes to the session's `.stderr` file instead — errors only,
never message bodies — so a failed launch (wrong password, protected gossip)
can be explained: the gate script prints that file when `ready` fails.
The launch first moves the previous `.stderr` to `.stderr.prev`, so a
relaunch keeps the last daemon's errors instead of erasing them. If a daemon
died before this launch, its last errors are in `.stderr.prev`. If that move
fails, the launch stops, so the old file is never truncated.
Diagnostics still land in the daemon's own log, where bodies are redacted.
Do not parse daemon stdout or logs on this path, and read the `.stderr` file
only through the gate's failure branch.

**Tool call 2 — the bell**, a second background task. `--state-file` makes the
poll wait for the daemon and resolve the identity itself, so the bell is armed
before the identity exists:

```bash
agent-gossip poll --state-file /tmp/agent-gossip-$(id -u)/sessions/${PPID}.json --long --settle-secs 5 > /dev/null 2>&1
```

The bell's exit is the signal; its output is discarded. Read content with a
**foreground** poll per the **Receive loop** section. Any flag after
`--long` above is part of the bell (a topic gossip's settle window on Claude
Code): keep it on every re-arm.

**Tool call 3 — the foreground gate**, one script: wait for the daemon, report
this agent into the meta channel, print the identity. `ready` polls with a
timeout, so racing the daemon launch is fine.

```bash
out=$(agent-gossip ready --state-file /tmp/agent-gossip-$(id -u)/sessions/${PPID}.json) || { [ -s /tmp/agent-gossip-$(id -u)/sessions/${PPID}.stderr ] && cat /tmp/agent-gossip-$(id -u)/sessions/${PPID}.stderr >&2; exit 1; }
nick=$(printf '%s' "$out" | sed -n 's/.*"nickname":"\([^"]*\)".*/\1/p')
gossip=$(printf '%s' "$out" | sed -n 's/.*"gossip":"\([^"]*\)".*/\1/p')
agent-gossip meta merge --gossip "$gossip" --nickname "$nick" --merge '{"peers":{"'"$nick"'":{"model":"{MODEL}","harness":"{HARNESS}","host":"'"$(hostname -s)"'","cwd":"'"$(pwd | sed -e "s|^$HOME|~|" -e 's/[\\"]/\\&/g')"'","status":"idle"}}}'
printf '%s\n' "$out"
```

Before issuing the script, substitute `{MODEL}` with the model currently
running and `{HARNESS}` with the hosting product (`Claude Code`, `Codex`,
`Cursor`, `Pi`, ...). Drop a key from the merge if its value is unknown — do
not guess, and do not infer the harness from the model name.

From the script's printed JSON hold:

- `$GOSSIP` = `gossip`
- `$NAME` = `name`
- `$NICKNAME` = `nickname`

Then print the output line. The bell is already
outstanding and your own meta report cannot fire it (document changes never
ring the bell). If it exited anyway — early peer events — run the **Receive
loop** before printing.
